core/traefik/proxies/files-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: squanchy
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: traefik-squanchy-transport@kubernetescrd
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: https-dsm
      protocol: TCP
      port: 5001
      targetPort: 5001
---
apiVersion: v1
kind: Endpoints
metadata:
  name: squanchy
subsets:
  - addresses:
      - ip: 172.16.1.5
    ports:
      - name: https-dsm
        port: 5001
        protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: squanchy-ingress
  annotations:
    cert-manager.io/cluster-issuer: internal
spec:
  rules:
    - host: files.lab.8none1.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: squanchy
                port:
                  name: https-dsm
  tls:
    - hosts:
        - files.lab.8none1.com
      secretName: squanchy-ingress-tls
