core/traefik/proxies/homeassistant-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: http
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: http
      protocol: TCP
      port: 8123
      targetPort: 8123
---
apiVersion: v1
kind: Endpoints
metadata:
  name: homeassistant
subsets:
  - addresses:
      - ip: 172.16.0.50
    ports:
      - name: http
        port: 8123
        protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant-ingress
  annotations:
    cert-manager.io/cluster-issuer: internal
spec:
  rules:
    - host: ha.lab.8none1.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homeassistant
                port:
                  name: http
  tls:
    - hosts:
        - ha.lab.8none1.com
      secretName: homeassistant-ingress-tls
