core/traefik/proxies/pve-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pve
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: traefik-pve-transport@kubernetescrd
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: https-pve
      protocol: TCP
      port: 8006
      targetPort: 8006
---
apiVersion: v1
kind: Endpoints
metadata:
  name: pve
  annotations:
    external-dns.alpha.kubernetes.io/controller: none
subsets:
  - addresses:
      - ip: 172.16.1.11
      - ip: 172.16.1.12
      - ip: 172.16.1.13
    ports:
      - name: https-pve
        port: 8006
        protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pve-ingress
  annotations:
    cert-manager.io/cluster-issuer: external
spec:
  rules:
    - host: pve.home.8none1.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pve
                port:
                  name: https-pve
  tls:
    - hosts:
        - pve.home.8none1.com
      secretName: pve-ingress-tls
